fix for overflowing nested lists

--- a/css/article-styling.less
+++ b/css/article-styling.less
@@ -8,9 +8,13 @@ body .article-body{
     font-size: 18px;
     font-family: 'Lato';
     color: @almost-white;
+
+    *{
+        max-width: 100%;
+    }
         h1,h2,h3,h4,h5,h6{
-            margin-top: 10px;
-            margin-bottom: 10px;
+            margin-top: 15px;
+            margin-bottom: 20px;
         }
 
     h1{
@@ -47,27 +51,36 @@ body .article-body{
         font-size: 23px;
         line-height: 25px;
     }
-
+      
     p{ margin-top: 10px;
         margin-bottom: 10px;}
 
     ol{
-        padding-left: 40px;
+        margin-left: 60px;
         margin-bottom: 10px;
+     &::after{content: " ";
+        display: block;
+        hegiht: 0;
+        clear: both;}
+        
+        
         margin-top: 5px;
         li{ list-style-type: decimal;
+           
             font-weight: 300;
             position: relative;
             margin-top: 5px;
             margin-bottom: 5px;
-        left: 40px;
-
-
 
             }
+
     }
 
     ul{
+        &::after{content: " ";
+        display: block;
+        hegiht: 0;
+        clear: both;}
 
         li{
             list-style-type: circle;
@@ -75,6 +88,7 @@ body .article-body{
         left: 40px;
         margin-top: 5px;
         margin-bottom: 5px;
+        width: 80%;
 
         }
     }
@@ -123,6 +137,31 @@ body .article-body{
             margin-top: 0;
             margin-right: 40px;
             margin-bottom: 20px;
+        }
+    }
+
+    dl{
+        width: 100%;
+
+        dt{
+            font-weight: 700;
+            float: left;
+            clear: left;
+            width: 12%;
+            text-align: right;
+          
+        }
+
+        dt:after{
+            content: ':';
+            margin-right: 40px;
+            
+            
+        }
+
+        dd{
+            font-weight: 300;  
+            width: 88%;
         }
     }
 
